--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
     <main>
         <section id="fan-zone">
             <h2>Fan Zone</h2>
-            <img src="FAN.gif" id="fan-img" alt="A fan. Just spinning.">
+            <img src="fan.gif" id="fan-img" alt="A fan. Just spinning.">
             <p>The fan spins. You feel... nothing.</p>
         </section>
         
